--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="node_modules/bulma/css/bulma.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="custom_style.css">
@@ -8,13 +9,13 @@
     <title>Assignment 2</title>
 </head>
 <body>
-<section class="">
+<section class="hero is-dark is-fullheight">
     <div class="hero-body">
         <div class="">
-            <h1 class="">
+            <h1 class="title">
                 Comp426
             </h1>
-            <h2 class="">
+            <h2 class="subtitle">
                 A web development class
             </h2>
         </div>
@@ -24,7 +25,7 @@
     <div class="container">
         <div class="content">
             <h1 class="title">CSS Frameworks</h1>
-            <h5 class="">How to use a framework effectively</h5>
+            <h5 class="subtitle has-text-grey">How to use a framework effectively</h5>
             <p>
 	    	When it comes to developing websites, design can be a very fun aspect.
 		But in reality we often don't want to spend hours writing CSS.
@@ -40,7 +41,7 @@
                 hand with having a good conversation.
                 <br>
                 <br>
-                <span class="">chikezie ejiasi</span>
+                <span class="is-capitalized">chikezie ejiasi</span>
             </blockquote>
             <p>
 	    	Now something to be careful of is making every site you make look identical.
