--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	    </p>
         </div>
         <hr>
-        <div class="">
+        <div class="content has-text-centered">
             <h1 class="">Consistency is Key</h1>
             <h5 class="">Elements on a web page should be related and follow the same theme</h5>
             <p>
@@ -72,7 +72,7 @@
 	    </p>
         </div>
         <hr>
-        <div class="">
+        <div class="content has-text-right">
             <h1 class="">Consistency is Key</h1>
             <h5 class="">Elements on a web page should be related and follow the same theme</h5>
             <p>
@@ -91,15 +91,15 @@
             <h1 class="title has-text-info is-family-secondary">Flavour</h1>
             <h5 class="subtitle has-text-grey is-italic">Express yourself with fonts, colors, images, and more</h5>
         </div>
-        <div class="">
+        <div class="tabs is-medium is-centered">
             <ul>
-                <li class=""><a>Pictures</a></li>
+                <li class="is-active"><a>Pictures</a></li>
                 <li><a>Music</a></li>
                 <li><a>Videos</a></li>
                 <li><a>Documents</a></li>
             </ul>
         </div>
-        <div class="">
+        <div class="tabs is-medium is-centered">
             <div class="column">
                 <img src="images/all-01.jpg" alt="Pictures">
             </div>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="">
                         <div class="">
-                            <button class="" type="submit">Submit</button>
+                            <button class="button is-dark" type="submit">Submit</button>
                         </div>
                     </div>
                 </form>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="">
                         <div class="">
-                            <button class="" type="submit">Submit</button>
+                            <button class="button is-dark" type="submit">Submit</button>
                         </div>
                     </div>
                 </form>
