partial login portion

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
     </div>
 </section>
-<section class="">
+<section class="section has-background-white">
     <div class="container">
         <div class="content">
             <div class="columns">
@@ -153,9 +153,9 @@
 </section>
 <section class="">
     <div class="container">
-        <div class="">
+        <div class="columns">
             <div class="column">
-                <h1 class="">Login</h1>
+                <h1 class="title has-text-weight-normal">Login</h1>
                 <form>
                     <div class="field">
                         <label class="label">Username</label>
@@ -163,10 +163,10 @@
                             <input class="input" type="text" placeholder="Cookie Monster" name="username">
                         </div>
                     </div>
-                    <div class="">
-                        <label class="">Password</label>
+                    <div class="field">
+                        <label class="label">Password</label>
                         <div class="">
-                            <input class="" type="password" placeholder="password123" name="password">
+                            <input class="input" type="password" placeholder="password123" name="password">
                         </div>
                     </div>
                     <div class="">
@@ -184,19 +184,19 @@
                     </div>
                 </form>
             </div>
-            <div class="">
-                <h1 class="">Signup</h1>
+            <div class="column">
+                <h1 class="title has-text-weight-normal">Signup</h1>
                 <form>
-                    <div class="">
-                        <label class="">Username</label>
+                    <div class="field">
+                        <label class="label">Username</label>
                         <div class="">
-                            <input class="" type="text" placeholder="Cookie Monster 2.0" name="username">
+                            <input class="input" type="text" placeholder="Cookie Monster 2.0" name="username">
                         </div>
                     </div>
                     <div class="">
                         <label class="">Password</label>
                         <div class="">
-                            <input class="" type="password" placeholder="password12345">
+                            <input class="input" type="password" placeholder="password12345">
                         </div>
                     </div>
                     <div class="">
