--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li><a>Documents</a></li>
             </ul>
         </div>
-        <div class="tabs is-medium is-centered">
+        <div class="columns is-multiline justify-center">
             <div class="column">
                 <img src="images/all-01.jpg" alt="Pictures">
             </div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="field">
                         <label class="label">Password</label>
-                        <div class="">
+                        <div class="control">
                             <input class="input" type="password" placeholder="password123" name="password">
                         </div>
                     </div>
@@ -189,26 +189,26 @@
                 <form>
                     <div class="field">
                         <label class="label">Username</label>
-                        <div class="">
+                        <div class="control">
                             <input class="input" type="text" placeholder="Cookie Monster 2.0" name="username">
                         </div>
                     </div>
                     <div class="">
-                        <label class="">Password</label>
-                        <div class="">
+                        <label class="label">Password</label>
+                        <div class="control">
                             <input class="input" type="password" placeholder="password12345">
                         </div>
                     </div>
                     <div class="">
-                        <label class="">Repeat Password</label>
-                        <div class="">
+                        <label class="label">Repeat Password</label>
+                        <div class="control">
                             <input class="input" type="password" placeholder="password12345" name="password">
                         </div>
                     </div>
                     <div class="">
-                        <label class="">Account type</label>
-                        <div class="">
-                            <div class="">
+                        <label class="label">Account type</label>
+                        <div class="control">
+                            <div class="select">
                                 <select name="accountType">
                                     <option>Student</option>
                                     <option>Teacher</option>
