--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <hr>
         <div class="content has-text-centered">
             <h1 class="title has-text-weight-normal">Consistency is Key</h1>
-            <h5 class="subtitle has-grey-text has-text-weight-normal">Elements on a web page should be related and follow the same theme</h5>
+            <h5 class="subtitle has-text-grey has-text-weight-normal">Elements on a web page should be related and follow the same theme</h5>
             <p>
 	    	Remember that everything on a web page has a relationship with the other content.
 	    </p>
@@ -81,7 +81,7 @@
         </div>
         <hr>
         <div class="notification is-danger">
-            <p><span class="">Warning! </span>Even with a framework you can still make mistakes!</p>
+            <p><span class="has-text-weight-bold">Warning! </span>Even with a framework you can still make mistakes!</p>
         </div>
     </div>
 </section>
