--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section class="hero is-dark is-fullheight">
     <div class="hero-body">
-        <div class="">
+        <div class="container">
             <h1 class="title">
                 Comp426
             </h1>
@@ -55,7 +55,7 @@
     </div>
 </section>
 <section class="section has-background-white">
-    <div class="">
+    <div class=container>
         <div class="content">
             <h1 class="title has-text-weight-bold">Consistency is Key</h1>
             <h5 class="subtitle has-text-grey has-text-weight-bold">Elements on a web page should be related and follow the same theme</h5>
@@ -151,7 +151,7 @@
         </div>
     </div>
 </section>
-<section class="">
+<section class="section">
     <div class="container">
         <div class="columns">
             <div class="column">
@@ -169,8 +169,8 @@
                             <input class="input" type="password" placeholder="password123" name="password">
                         </div>
                     </div>
-                    <div class="">
-                        <div class="">
+                    <div class="field">
+                        <div class="control">
                             <label class="checkbox">
                                 <input type="checkbox" name="remember">
                                 Remember login?
@@ -193,19 +193,19 @@
                             <input class="input" type="text" placeholder="Cookie Monster 2.0" name="username">
                         </div>
                     </div>
-                    <div class="">
+                    <div class="field">
                         <label class="label">Password</label>
                         <div class="control">
                             <input class="input" type="password" placeholder="password12345">
                         </div>
                     </div>
-                    <div class="">
+                    <div class="field">
                         <label class="label">Repeat Password</label>
                         <div class="control">
                             <input class="input" type="password" placeholder="password12345" name="password">
                         </div>
                     </div>
-                    <div class="">
+                    <div class="field">
                         <label class="label">Account type</label>
                         <div class="control">
                             <div class="select">
@@ -216,8 +216,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="">
-                        <div class="">
+                    <div class="field">
+                        <div class="control">
                             <button class="button is-dark" type="submit">Submit</button>
                         </div>
                     </div>
