--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                             </label>
                         </div>
                     </div>
-                    <div class="">
-                        <div class="">
+                    <div class="field">
+                        <div class="control">
                             <button class="button is-dark" type="submit">Submit</button>
                         </div>
                     </div>
